--- a/xslim_files/css/style.css
+++ b/xslim_files/css/style.css
@@ -1,11 +1,15 @@
 /* CSS Document */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 body {
-  font-family: 'Open-Sans', sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont,
+             'Segoe UI', Roboto, 'Helvetica Neue',
+             Arial, sans-serif;
+  /* font-family: 'Open-Sans', sans-serif;
   font-weight: 300;
-  background-color: #fff;
+  background-color: #fff; */
 }
+
 .content {
   width: 1000px;
   padding: 25px 50px;
@@ -13,7 +17,8 @@ body {
   background-color: white;
   box-shadow: 0px 0px 10px #999;
   border-radius: 15px;
-  font-family: "Google Sans", sans-serif;
+  font-family: inherit;
+  /* font-family: "Google Sans", sans-serif; */
 }
 .contentblock {
   width: 950px;
