--- a/xslim_files/css/style.css
+++ b/xslim_files/css/style.css
@@ -1,13 +1,16 @@
 /* CSS Document */
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+/* @import url(https://fonts.googleapis.com/css?family=Open+Sans); */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 body {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont,
              'Segoe UI', Roboto, 'Helvetica Neue',
              Arial, sans-serif;
-  /* font-family: 'Open-Sans', sans-serif;
+  /* font-family: 'Open-Sans', sans-serif; */
+  color: var(--text-primary);
+  font-size: 16px;
   font-weight: 300;
-  background-color: #fff; */
+  line-height: 1.6;
+  background-color: var(--background-primary);
 }
 
 .content {
